Add in remove bam process

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -84,9 +84,15 @@ params {
             publish_dir      = "bwa/mergedLibrary"
             publish_results  = "all"
         }
+        'remove_bam_orphans' {
+            args             = "--only_fr_pairs"
+            suffix           = ".mLb.clN"
+            publish_dir      = "bwa/mergedLibrary"
+            publish_results  = "all"
+        }
         'samtools_sort_filter' {
             args             = ""
-            suffix           = ".mLb.flT.sorted"
+            suffix           = ".mLb.clN.sorted"
             publish_dir      = "bwa/mergedLibrary"
             publish_results  = "all"
         }
