--- a/conf/modules.config
+++ b/conf/modules.config
@@ -102,6 +102,18 @@ params {
             publish_dir      = "bwa/mergedLibrary/picard_metrics"
             publish_results  = "all"
         }
+        'preseq_lc_extrap' {
+            args             = "-verbose -bam -seed 1"
+            suffix           = ".mLb.mkD"
+            publish_dir      = "bwa/mergedLibrary/preseq"
+            publish_results  = "all"
+        }
+        'bedtools_genomecov' {
+            args             = ""
+            suffix           = ".mLb.mkD"
+            publish_dir      = "bwa/mergedLibrary/bigwig"
+            publish_results  = "all"
+        }
         'get_software_versions' {
             args             = ""
             suffix           = ""
