--- a/conf/modules.config
+++ b/conf/modules.config
@@ -114,6 +114,12 @@ params {
             publish_dir      = "bwa/mergedLibrary/bigwig"
             publish_results  = "all"
         }
+        'ucsc_bedgraphtobigwig' {
+            args             = ""
+            suffix           = ".mLb.mkD"
+            publish_dir      = "bwa/mergedLibrary/bigwig"
+            publish_results  = "all"
+        }
         'get_software_versions' {
             args             = ""
             suffix           = ""
