Fix bigwig generation

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -120,6 +120,24 @@ params {
             publish_dir      = "bwa/mergedLibrary/bigwig"
             publish_results  = "all"
         }
+        'deeptools_computematrix' {
+            args             = "scale-regions --regionBodyLength 1000 --beforeRegionStartLength 3000 --afterRegionStartLength 3000 --skipZeros --smartLabels"
+            suffix           = ".mLb.mkD"
+            publish_dir      = "bwa/mergedLibrary/deeptools"
+            publish_results  = "all"
+        }
+        'deeptools_plotprofile' {
+            args             = ""
+            suffix           = ".mLb.mkD"
+            publish_dir      = "bwa/mergedLibrary/deeptools"
+            publish_results  = "all"
+        }
+        'deeptools_plotheatmap' {
+            args             = ""
+            suffix           = ".mLb.mkD"
+            publish_dir      = "bwa/mergedLibrary/deeptools"
+            publish_results  = "all"
+        }
         'get_software_versions' {
             args             = ""
             suffix           = ""
