--- a/conf/modules.config
+++ b/conf/modules.config
@@ -98,43 +98,49 @@ params {
         }
         'picard_collectmultiplemetrics' {
             args             = "VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
-            suffix           = ".mLb.mkD.sorted"
+            suffix           = ".mLb.clN.sorted"
             publish_dir      = "bwa/mergedLibrary/picard_metrics"
             publish_results  = "all"
         }
         'preseq_lc_extrap' {
             args             = "-verbose -bam -seed 1"
-            suffix           = ".mLb.mkD"
+            suffix           = ".mLb.clN"
             publish_dir      = "bwa/mergedLibrary/preseq"
             publish_results  = "all"
         }
         'bedtools_genomecov' {
             args             = ""
-            suffix           = ".mLb.mkD"
+            suffix           = ".mLb.clN"
             publish_dir      = "bwa/mergedLibrary/bigwig"
             publish_results  = "all"
         }
         'ucsc_bedgraphtobigwig' {
             args             = ""
-            suffix           = ".mLb.mkD"
+            suffix           = ".mLb.clN"
             publish_dir      = "bwa/mergedLibrary/bigwig"
             publish_results  = "all"
         }
         'deeptools_computematrix' {
             args             = "scale-regions --regionBodyLength 1000 --beforeRegionStartLength 3000 --afterRegionStartLength 3000 --skipZeros --smartLabels"
-            suffix           = ".mLb.mkD"
+            suffix           = ".mLb.clN"
             publish_dir      = "bwa/mergedLibrary/deeptools"
             publish_results  = "all"
         }
         'deeptools_plotprofile' {
             args             = ""
-            suffix           = ".mLb.mkD"
+            suffix           = ".mLb.clN"
             publish_dir      = "bwa/mergedLibrary/deeptools"
             publish_results  = "all"
         }
         'deeptools_plotheatmap' {
             args             = ""
-            suffix           = ".mLb.mkD"
+            suffix           = ".mLb.clN"
+            publish_dir      = "bwa/mergedLibrary/deeptools"
+            publish_results  = "all"
+        }
+        'deeptools_plotfingerprint' {
+            args             = "--skipZeros"
+            suffix           = ".mLb.clN"
             publish_dir      = "bwa/mergedLibrary/deeptools"
             publish_results  = "all"
         }
