Update modules config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -144,6 +144,12 @@ params {
             publish_dir      = "bwa/mergedLibrary/deeptools"
             publish_results  = "all"
         }
+        'homer_annotatepeaks_macs2' {
+            args             = "-gid"
+            suffix           = ".mLb.clN"
+            publish_dir      = "bwa/mergedLibrary/homer"
+            publish_results  = "all"
+        }
         'get_software_versions' {
             args             = ""
             suffix           = ""
