--- a/conf/modules.config
+++ b/conf/modules.config
@@ -108,6 +108,12 @@ params {
             publish_dir      = "bwa/mergedLibrary/preseq"
             publish_results  = "all"
         }
+        'phantompeakqualtools' {
+            args             = ""
+            suffix           = ".mLb.clN"
+            publish_dir      = "bwa/mergedLibrary/phantompeakqualtools"
+            publish_results  = "all"
+        }
         'bedtools_genomecov' {
             args             = ""
             suffix           = ".mLb.clN"
