--- a/conf/modules.config
+++ b/conf/modules.config
@@ -17,7 +17,7 @@ params {
             publish_dir      = "fastqc"
             publish_results  = "all"
         }
-        'trim_galore' {
+        'trimgalore' {
             args             = "--fastqc"
             suffix           = ""
             publish_dir      = "trim_galore"
@@ -102,7 +102,7 @@ params {
             publish_dir      = "bwa/mergedLibrary/picard_metrics"
             publish_results  = "all"
         }
-        'preseq_lc_extrap' {
+        'preseq_lcextrap' {
             args             = "-verbose -bam -seed 1"
             suffix           = ".mLb.clN"
             publish_dir      = "bwa/mergedLibrary/preseq"
