Get --conda working for pipeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -72,6 +72,7 @@ params {
   config_profile_url = false
 
   // Options: Other
+  conda = false
   help = false
   outdir = './results'
   publish_dir_mode = 'copy'
