Add in macs2 process

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -150,6 +150,12 @@ params {
             publish_dir      = "bwa/mergedLibrary/deeptools"
             publish_results  = "all"
         }
+        'macs2_callpeak' {
+            args             = "--keep-dup all"
+            suffix           = ""
+            publish_dir      = "bwa/mergedLibrary/macs2"
+            publish_results  = "all"
+        }
         'homer_annotatepeaks_macs2' {
             args             = "-gid"
             suffix           = ".mLb.clN"
