--- a/conf/modules.config
+++ b/conf/modules.config
@@ -159,7 +159,7 @@ params {
         'homer_annotatepeaks_macs2' {
             args             = "-gid"
             suffix           = ".mLb.clN"
-            publish_dir      = "bwa/mergedLibrary/homer"
+            publish_dir      = "bwa/mergedLibrary/macs2"
             publish_results  = "all"
         }
         'get_software_versions' {
