Add MultiQC options

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -174,5 +174,11 @@ params {
             publish_dir      = "pipeline_info"
             publish_results  = "all"
         }
+        'multiqc' {
+            args             = ""
+            suffix           = ""
+            publish_dir      = "multiqc"
+            publish_results  = "all"
+        }
     }
 }
