Rename subworkflows to sort by file type

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -5,7 +5,7 @@
  */
 params {
     modules {
-        'check_samplesheet' {
+        'samplesheet_check' {
             args             = ""
             suffix           = ""
             publish_dir      = "pipeline_info"
@@ -78,13 +78,13 @@ params {
             publish_dir      = "bwa/mergedLibrary"
             publish_results  = "all"
         }
-        'filter_bam' {
+        'bam_filter' {
             args             = ""
             suffix           = ".mLb.flT.sorted"
             publish_dir      = "bwa/mergedLibrary"
             publish_results  = "all"
         }
-        'remove_bam_orphans' {
+        'bam_remove_orphans' {
             args             = "--only_fr_pairs"
             suffix           = ".mLb.clN"
             publish_dir      = "bwa/mergedLibrary"
