--- a/conf/modules.config
+++ b/conf/modules.config
@@ -68,7 +68,7 @@ params {
         }
         'picard_markduplicates' {
             args             = "ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
-            suffix           = ".mLb.mkD"
+            suffix           = ".mLb.mkD.sorted"
             publish_dir      = "bwa/mergedLibrary"
             publish_results  = "all"
         }
