Remove --single_end ci test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
       NXF_ANSI_LOG: false
     strategy:
       matrix:
-        parameters: [--single_end, --skip_trimming, --skip_consensus_peaks]
+        parameters: [--skip_trimming, --skip_consensus_peaks]
     steps:
       - name: Check out pipeline code
         uses: actions/checkout@v2
