--- a/conf/modules.config
+++ b/conf/modules.config
@@ -156,9 +156,21 @@ params {
             publish_dir      = "bwa/mergedLibrary/macs2"
             publish_results  = "all"
         }
+        'plot_macs2_qc' {
+            args             = "-o ./ -p macs2_peak"
+            suffix           = ""
+            publish_dir      = "bwa/mergedLibrary/macs2"
+            publish_results  = "all"
+        }
         'homer_annotatepeaks_macs2' {
             args             = "-gid"
-            suffix           = ".mLb.clN"
+            suffix           = "_peaks"
+            publish_dir      = "bwa/mergedLibrary/macs2"
+            publish_results  = "all"
+        }
+        'plot_homer_annotatepeaks' {
+            args             = "-o ./ -p macs2_annotatePeaks"
+            suffix           = ""
             publish_dir      = "bwa/mergedLibrary/macs2"
             publish_results  = "all"
         }
