--- a/conf/modules.config
+++ b/conf/modules.config
@@ -174,6 +174,12 @@ params {
             publish_dir      = "bwa/mergedLibrary/macs2"
             publish_results  = "all"
         }
+        'macs2_consensus' {
+            args             = ""
+            suffix           = ""
+            publish_dir      = "bwa/mergedLibrary/macs2"
+            publish_results  = "all"
+        }
         'get_software_versions' {
             args             = ""
             suffix           = ""
