--- a/conf/modules.config
+++ b/conf/modules.config
@@ -3,239 +3,258 @@
  *  Nextflow config file for module specific-options
  * -------------------------------------------------
  */
-params {
-    modules {
-        'samplesheet_check' {
-            args             = ""
-            suffix           = ""
-            publish_dir      = "pipeline_info"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'fastqc' {
-            args             = "--quiet"
-            suffix           = ""
-            publish_dir      = "fastqc"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'trimgalore' {
-            args             = "--fastqc"
-            suffix           = ""
-            publish_dir      = "trim_galore"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'bwa_index' {
-            args             = "-a bwtsw"
-            suffix           = ""
-            publish_dir      = "genome/bwa_index"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'gtf2bed' {
-            args             = ""
-            suffix           = ""
-            publish_dir      = "genome"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'make_genome_filter' {
-            args             = ""
-            suffix           = ""
-            publish_dir      = "genome"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'get_chrom_sizes' {
-            args             = ""
-            suffix           = ""
-            publish_dir      = "genome"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'bwa_mem' {
-            args             = "-M"
-            args2            = "-h -F 0x0100 -O BAM"
-            suffix           = ".Lb"
-            publish_dir      = "bwa/library"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'samtools_sort_lib' {
-            args             = ""
-            suffix           = ".Lb.sorted"
-            publish_dir      = "bwa/library"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'picard_mergesamfiles' {
-            args             = "SORT_ORDER=coordinate VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
-            suffix           = ".mLb.sorted"
-            publish_dir      = "bwa/mergedLibrary"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'picard_markduplicates' {
-            args             = "ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
-            suffix           = ".mLb.mkD.sorted"
-            publish_dir      = "bwa/mergedLibrary"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'samtools_sort_merged_lib' {
-            args             = ""
-            suffix           = ".mLb.mkD.sorted"
-            publish_dir      = "bwa/mergedLibrary"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'bam_filter' {
-            args             = ""
-            suffix           = ".mLb.flT.sorted"
-            publish_dir      = "bwa/mergedLibrary"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'bam_remove_orphans' {
-            args             = "--only_fr_pairs"
-            suffix           = ".mLb.clN"
-            publish_dir      = "bwa/mergedLibrary"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'samtools_sort_filter' {
-            args             = ""
-            suffix           = ".mLb.clN.sorted"
-            publish_dir      = "bwa/mergedLibrary"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'picard_collectmultiplemetrics' {
-            args             = "VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
-            suffix           = ".mLb.clN.sorted"
-            publish_dir      = "bwa/mergedLibrary/picard_metrics"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'preseq_lcextrap' {
-            args             = "-verbose -bam -seed 1"
-            suffix           = ".mLb.clN"
-            publish_dir      = "bwa/mergedLibrary/preseq"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'phantompeakqualtools' {
-            args             = ""
-            suffix           = ".mLb.clN"
-            publish_dir      = "bwa/mergedLibrary/phantompeakqualtools"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'bedtools_genomecov' {
-            args             = ""
-            suffix           = ".mLb.clN"
-            publish_dir      = "bwa/mergedLibrary/bigwig"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'ucsc_bedgraphtobigwig' {
-            args             = ""
-            suffix           = ".mLb.clN"
-            publish_dir      = "bwa/mergedLibrary/bigwig"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'deeptools_computematrix' {
-            args             = "scale-regions --regionBodyLength 1000 --beforeRegionStartLength 3000 --afterRegionStartLength 3000 --skipZeros --smartLabels"
-            suffix           = ".mLb.clN"
-            publish_dir      = "bwa/mergedLibrary/deeptools"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'deeptools_plotprofile' {
-            args             = ""
-            suffix           = ".mLb.clN"
-            publish_dir      = "bwa/mergedLibrary/deeptools"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'deeptools_plotheatmap' {
-            args             = ""
-            suffix           = ".mLb.clN"
-            publish_dir      = "bwa/mergedLibrary/deeptools"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'deeptools_plotfingerprint' {
-            args             = "--skipZeros"
-            suffix           = ".mLb.clN"
-            publish_dir      = "bwa/mergedLibrary/deeptools"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'macs2_callpeak' {
-            args             = "--keep-dup all"
-            suffix           = ""
-            publish_dir      = "bwa/mergedLibrary/macs2"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'plot_macs2_qc' {
-            args             = "-o ./ -p macs2_peak"
-            suffix           = ""
-            publish_dir      = "bwa/mergedLibrary/macs2"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'homer_annotatepeaks_macs2' {
-            args             = "-gid"
-            suffix           = "_peaks"
-            publish_dir      = "bwa/mergedLibrary/macs2"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'plot_homer_annotatepeaks' {
-            args             = "-o ./ -p macs2_annotatePeaks"
-            suffix           = ""
-            publish_dir      = "bwa/mergedLibrary/macs2"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'macs2_consensus' {
-            args             = ""
-            suffix           = ""
-            publish_dir      = "bwa/mergedLibrary/macs2"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'homer_annotatepeaks_consensus' {
-            args             = "-gid"
-            suffix           = ""
-            publish_dir      = "bwa/mergedLibrary/macs2"
-            publish_results  = "all"
-            publish_by_id    = true
-        }
-        'get_software_versions' {
-            args             = ""
-            suffix           = ""
-            publish_dir      = "pipeline_info"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'output_documentation' {
-            args             = ""
-            suffix           = ""
-            publish_dir      = "pipeline_info"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-        'multiqc' {
-            args             = ""
-            suffix           = ""
-            publish_dir      = "multiqc"
-            publish_results  = "all"
-            publish_by_id    = false
-        }
-    }
+
+def module_options_init(publish_dir="", args="", suffix="", publish_results="all", publish_by_id=false, args2="") {
+    def Map options = [:]
+    options.publish_dir = publish_dir
+    options.args = args
+    options.suffix = suffix
+    options.publish_results = publish_results
+    options.publish_by_id = publish_by_id
+    options.args2 = args2
+    return options
 }
+
+def Map modules = [:]
+modules['samplesheet_check'] = module_options_init(publish_dir="pipeline_info")
+modules['fastqc']            = module_options_init(publish_dir="fastqc",     args="--quiet")
+modules['trimgalore']        = module_options_init(publish_dir="trimgalore", args="--fastqc")
+
+params.modules = modules
+println(params.modules)
+// params {
+//     modules {
+//         // 'samplesheet_check' {
+//         //     args             = ""
+//         //     suffix           = ""
+//         //     publish_dir      = "pipeline_info"
+//         //     publish_results  = "all"
+//         //     publish_by_id    = false
+//         // }
+//         'fastqc' {
+//             args             = "--quiet"
+//             suffix           = ""
+//             publish_dir      = "fastqc"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'trimgalore' {
+//             args             = "--fastqc"
+//             suffix           = ""
+//             publish_dir      = "trim_galore"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'bwa_index' {
+//             args             = "-a bwtsw"
+//             suffix           = ""
+//             publish_dir      = "genome/bwa_index"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'gtf2bed' {
+//             args             = ""
+//             suffix           = ""
+//             publish_dir      = "genome"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'make_genome_filter' {
+//             args             = ""
+//             suffix           = ""
+//             publish_dir      = "genome"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'get_chrom_sizes' {
+//             args             = ""
+//             suffix           = ""
+//             publish_dir      = "genome"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'bwa_mem' {
+//             args             = "-M"
+//             args2            = "-h -F 0x0100 -O BAM"
+//             suffix           = ".Lb"
+//             publish_dir      = "bwa/library"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'samtools_sort_lib' {
+//             args             = ""
+//             suffix           = ".Lb.sorted"
+//             publish_dir      = "bwa/library"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'picard_mergesamfiles' {
+//             args             = "SORT_ORDER=coordinate VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
+//             suffix           = ".mLb.sorted"
+//             publish_dir      = "bwa/mergedLibrary"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'picard_markduplicates' {
+//             args             = "ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
+//             suffix           = ".mLb.mkD.sorted"
+//             publish_dir      = "bwa/mergedLibrary"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'samtools_sort_merged_lib' {
+//             args             = ""
+//             suffix           = ".mLb.mkD.sorted"
+//             publish_dir      = "bwa/mergedLibrary"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'bam_filter' {
+//             args             = ""
+//             suffix           = ".mLb.flT.sorted"
+//             publish_dir      = "bwa/mergedLibrary"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'bam_remove_orphans' {
+//             args             = "--only_fr_pairs"
+//             suffix           = ".mLb.clN"
+//             publish_dir      = "bwa/mergedLibrary"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'samtools_sort_filter' {
+//             args             = ""
+//             suffix           = ".mLb.clN.sorted"
+//             publish_dir      = "bwa/mergedLibrary"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'picard_collectmultiplemetrics' {
+//             args             = "VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
+//             suffix           = ".mLb.clN.sorted"
+//             publish_dir      = "bwa/mergedLibrary/picard_metrics"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'preseq_lcextrap' {
+//             args             = "-verbose -bam -seed 1"
+//             suffix           = ".mLb.clN"
+//             publish_dir      = "bwa/mergedLibrary/preseq"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'phantompeakqualtools' {
+//             args             = ""
+//             suffix           = ".mLb.clN"
+//             publish_dir      = "bwa/mergedLibrary/phantompeakqualtools"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'bedtools_genomecov' {
+//             args             = ""
+//             suffix           = ".mLb.clN"
+//             publish_dir      = "bwa/mergedLibrary/bigwig"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'ucsc_bedgraphtobigwig' {
+//             args             = ""
+//             suffix           = ".mLb.clN"
+//             publish_dir      = "bwa/mergedLibrary/bigwig"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'deeptools_computematrix' {
+//             args             = "scale-regions --regionBodyLength 1000 --beforeRegionStartLength 3000 --afterRegionStartLength 3000 --skipZeros --smartLabels"
+//             suffix           = ".mLb.clN"
+//             publish_dir      = "bwa/mergedLibrary/deeptools"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'deeptools_plotprofile' {
+//             args             = ""
+//             suffix           = ".mLb.clN"
+//             publish_dir      = "bwa/mergedLibrary/deeptools"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'deeptools_plotheatmap' {
+//             args             = ""
+//             suffix           = ".mLb.clN"
+//             publish_dir      = "bwa/mergedLibrary/deeptools"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'deeptools_plotfingerprint' {
+//             args             = "--skipZeros"
+//             suffix           = ".mLb.clN"
+//             publish_dir      = "bwa/mergedLibrary/deeptools"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'macs2_callpeak' {
+//             args             = "--keep-dup all"
+//             suffix           = ""
+//             publish_dir      = "bwa/mergedLibrary/macs2"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'plot_macs2_qc' {
+//             args             = "-o ./ -p macs2_peak"
+//             suffix           = ""
+//             publish_dir      = "bwa/mergedLibrary/macs2"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'homer_annotatepeaks_macs2' {
+//             args             = "-gid"
+//             suffix           = "_peaks"
+//             publish_dir      = "bwa/mergedLibrary/macs2"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'plot_homer_annotatepeaks' {
+//             args             = "-o ./ -p macs2_annotatePeaks"
+//             suffix           = ""
+//             publish_dir      = "bwa/mergedLibrary/macs2"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'macs2_consensus' {
+//             args             = ""
+//             suffix           = ""
+//             publish_dir      = "bwa/mergedLibrary/macs2"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'homer_annotatepeaks_consensus' {
+//             args             = "-gid"
+//             suffix           = ""
+//             publish_dir      = "bwa/mergedLibrary/macs2"
+//             publish_results  = "all"
+//             publish_by_id    = true
+//         }
+//         'get_software_versions' {
+//             args             = ""
+//             suffix           = ""
+//             publish_dir      = "pipeline_info"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'output_documentation' {
+//             args             = ""
+//             suffix           = ""
+//             publish_dir      = "pipeline_info"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//         'multiqc' {
+//             args             = ""
+//             suffix           = ""
+//             publish_dir      = "multiqc"
+//             publish_results  = "all"
+//             publish_by_id    = false
+//         }
+//     }
+// }
