Refactor provision of module options

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -4,257 +4,218 @@
  * -------------------------------------------------
  */
 
-def module_options_init(publish_dir="", args="", suffix="", publish_results="all", publish_by_id=false, args2="") {
+// Function to initialise default values and to generate a Groovy Map of module options
+def module_options (Map args) {
     def Map options = [:]
-    options.publish_dir = publish_dir
-    options.args = args
-    options.suffix = suffix
-    options.publish_results = publish_results
-    options.publish_by_id = publish_by_id
-    options.args2 = args2
+    options.args            = args.args ?: ''
+    options.args2           = args.args2 ?: ''
+    options.publish_dir     = args.publish_dir ?: ''
+    options.publish_results = args.publish_results ?: ''
+    options.publish_by_id   = args.publish_by_id ?: false
+    options.suffix          = args.suffix ?: ''
     return options
 }
 
 def Map modules = [:]
-modules['samplesheet_check'] = module_options_init(publish_dir="pipeline_info")
-modules['fastqc']            = module_options_init(publish_dir="fastqc",     args="--quiet")
-modules['trimgalore']        = module_options_init(publish_dir="trimgalore", args="--fastqc")
+modules['samplesheet_check'] =
+    module_options (
+        publish_dir     : "pipeline_info"
+    )
+
+modules['fastqc'] =
+    module_options (
+        args            : "--quiet",
+        publish_dir     : "fastqc"
+    )
+
+modules['trimgalore'] =
+    module_options (
+        args            : "--fastqc",
+        publish_dir     : "trimgalore"
+    )
+
+modules['bwa_index'] =
+    module_options (
+        args            : "-a bwtsw",
+        publish_dir     : "genome/bwa_index"
+    )
+
+modules['gtf2bed']  =
+    module_options (
+        publish_dir     : "genome"
+    )
+
+modules['make_genome_filter'] =
+    module_options (
+        publish_dir     : "genome"
+    )
+
+modules['get_chrom_sizes'] =
+    module_options (
+        publish_dir     : "genome"
+    )
+
+modules['bwa_mem'] =
+    module_options (
+        args            : "-M",
+        args2           : "-h -F 0x0100 -O BAM",
+        publish_dir     : "bwa/library",
+        suffix          : ".Lb"
+    )
+
+modules['samtools_sort_lib'] =
+    module_options (
+        publish_dir     : "bwa/library",
+        suffix          : ".Lb.sorted"
+    )
+
+modules['picard_mergesamfiles'] =
+    module_options (
+        args            : "SORT_ORDER=coordinate VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp",
+        publish_dir     : "bwa/mergedLibrary",
+        suffix          : ".mLb.sorted"
+    )
+
+modules['picard_markduplicates'] =
+    module_options (
+        args            : "ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp",
+        publish_dir     : "bwa/mergedLibrary",
+        suffix          : ".mLb.mkD.sorted"
+    )
+
+modules['samtools_sort_merged_lib'] =
+    module_options (
+        publish_dir     : "bwa/mergedLibrary",
+        suffix          : ".mLb.mkD.sorted"
+    )
+
+modules['bam_filter'] =
+    module_options (
+        publish_dir     : "bwa/mergedLibrary",
+        suffix          : ".mLb.flT.sorted"
+    )
+
+modules['bam_remove_orphans'] =
+    module_options (
+        args            : "--only_fr_pairs",
+        publish_dir     : "bwa/mergedLibrary",
+        suffix          : ".mLb.clN"
+    )
+
+modules['samtools_sort_filter'] =
+    module_options (
+        publish_dir     : "bwa/mergedLibrary",
+        suffix          : ".mLb.clN.sorted"
+    )
+
+modules['picard_collectmultiplemetrics'] =
+    module_options (
+        args            : "VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp",
+        publish_dir     : "bwa/mergedLibrary/picard_metrics",
+        suffix          : ".mLb.clN.sorted"
+    )
+
+modules['preseq_lcextrap'] =
+    module_options (
+        args            : "-verbose -bam -seed 1",
+        publish_dir     : "bwa/mergedLibrary/preseq",
+        suffix          : ".mLb.clN"
+    )
+
+modules['phantompeakqualtools'] =
+    module_options (
+        publish_dir     : "bwa/mergedLibrary/phantompeakqualtools",
+        suffix          : ".mLb.clN"
+    )
+
+modules['bedtools_genomecov'] =
+    module_options (
+        publish_dir     : "bwa/mergedLibrary/bigwig",
+        suffix          : ".mLb.clN"
+    )
+
+modules['ucsc_bedgraphtobigwig'] =
+    module_options (
+        publish_dir     : "bwa/mergedLibrary/bigwig",
+        suffix          : ".mLb.clN"
+    )
+
+modules['deeptools_computematrix'] =
+    module_options (
+        args            : "scale-regions --regionBodyLength 1000 --beforeRegionStartLength 3000 --afterRegionStartLength 3000 --skipZeros --smartLabels",
+        publish_dir     : "bwa/mergedLibrary/deeptools",
+        suffix          : ".mLb.clN"
+    )
+
+modules['deeptools_plotprofile'] =
+    module_options (
+        publish_dir     : "bwa/mergedLibrary/deeptools",
+        suffix          : ".mLb.clN"
+    )
+
+modules['deeptools_plotheatmap'] =
+    module_options (
+        publish_dir     : "bwa/mergedLibrary/deeptools",
+        suffix          : ".mLb.clN"
+    )
+
+modules['deeptools_plotfingerprint'] =
+    module_options (
+        args            : "--skipZeros",
+        publish_dir     : "bwa/mergedLibrary/deeptools",
+        suffix          : ".mLb.clN"
+    )
+
+modules['macs2_callpeak'] =
+    module_options (
+        args            : "--keep-dup all",
+        publish_dir     : "bwa/mergedLibrary/macs2"
+    )
+
+modules['plot_macs2_qc'] =
+    module_options (
+        args            : "-o ./ -p macs2_peak",
+        publish_dir     : "bwa/mergedLibrary/macs2"
+    )
+
+modules['homer_annotatepeaks_macs2'] =
+    module_options (
+        args            : "-gid",
+        publish_dir     : "bwa/mergedLibrary/macs2",
+        suffix          : "_peaks"
+    )
+
+modules['plot_homer_annotatepeaks'] =
+    module_options (
+        args            : "-o ./ -p macs2_annotatePeaks",
+        publish_dir     : "bwa/mergedLibrary/macs2",
+    )
+
+modules['macs2_consensus'] =
+    module_options (
+        publish_dir     : "bwa/mergedLibrary/macs2"
+    )
+
+modules['homer_annotatepeaks_consensus'] =
+    module_options (
+        args            : "-gid",
+        publish_dir     : "bwa/mergedLibrary/macs2",
+        publish_by_id   : true
+    )
+
+modules['get_software_versions'] =
+    module_options (
+        publish_dir     : "pipeline_info"
+    )
+
+modules['output_documentation'] =
+    module_options (
+        publish_dir     : "pipeline_info"
+    )
+
+modules['multiqc'] =
+    module_options (
+        publish_dir     : "multiqc"
+    )
 
 params.modules = modules
-println(params.modules)
-// params {
-//     modules {
-//         // 'samplesheet_check' {
-//         //     args             = ""
-//         //     suffix           = ""
-//         //     publish_dir      = "pipeline_info"
-//         //     publish_results  = "all"
-//         //     publish_by_id    = false
-//         // }
-//         'fastqc' {
-//             args             = "--quiet"
-//             suffix           = ""
-//             publish_dir      = "fastqc"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'trimgalore' {
-//             args             = "--fastqc"
-//             suffix           = ""
-//             publish_dir      = "trim_galore"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'bwa_index' {
-//             args             = "-a bwtsw"
-//             suffix           = ""
-//             publish_dir      = "genome/bwa_index"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'gtf2bed' {
-//             args             = ""
-//             suffix           = ""
-//             publish_dir      = "genome"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'make_genome_filter' {
-//             args             = ""
-//             suffix           = ""
-//             publish_dir      = "genome"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'get_chrom_sizes' {
-//             args             = ""
-//             suffix           = ""
-//             publish_dir      = "genome"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'bwa_mem' {
-//             args             = "-M"
-//             args2            = "-h -F 0x0100 -O BAM"
-//             suffix           = ".Lb"
-//             publish_dir      = "bwa/library"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'samtools_sort_lib' {
-//             args             = ""
-//             suffix           = ".Lb.sorted"
-//             publish_dir      = "bwa/library"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'picard_mergesamfiles' {
-//             args             = "SORT_ORDER=coordinate VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
-//             suffix           = ".mLb.sorted"
-//             publish_dir      = "bwa/mergedLibrary"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'picard_markduplicates' {
-//             args             = "ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
-//             suffix           = ".mLb.mkD.sorted"
-//             publish_dir      = "bwa/mergedLibrary"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'samtools_sort_merged_lib' {
-//             args             = ""
-//             suffix           = ".mLb.mkD.sorted"
-//             publish_dir      = "bwa/mergedLibrary"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'bam_filter' {
-//             args             = ""
-//             suffix           = ".mLb.flT.sorted"
-//             publish_dir      = "bwa/mergedLibrary"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'bam_remove_orphans' {
-//             args             = "--only_fr_pairs"
-//             suffix           = ".mLb.clN"
-//             publish_dir      = "bwa/mergedLibrary"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'samtools_sort_filter' {
-//             args             = ""
-//             suffix           = ".mLb.clN.sorted"
-//             publish_dir      = "bwa/mergedLibrary"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'picard_collectmultiplemetrics' {
-//             args             = "VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
-//             suffix           = ".mLb.clN.sorted"
-//             publish_dir      = "bwa/mergedLibrary/picard_metrics"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'preseq_lcextrap' {
-//             args             = "-verbose -bam -seed 1"
-//             suffix           = ".mLb.clN"
-//             publish_dir      = "bwa/mergedLibrary/preseq"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'phantompeakqualtools' {
-//             args             = ""
-//             suffix           = ".mLb.clN"
-//             publish_dir      = "bwa/mergedLibrary/phantompeakqualtools"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'bedtools_genomecov' {
-//             args             = ""
-//             suffix           = ".mLb.clN"
-//             publish_dir      = "bwa/mergedLibrary/bigwig"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'ucsc_bedgraphtobigwig' {
-//             args             = ""
-//             suffix           = ".mLb.clN"
-//             publish_dir      = "bwa/mergedLibrary/bigwig"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'deeptools_computematrix' {
-//             args             = "scale-regions --regionBodyLength 1000 --beforeRegionStartLength 3000 --afterRegionStartLength 3000 --skipZeros --smartLabels"
-//             suffix           = ".mLb.clN"
-//             publish_dir      = "bwa/mergedLibrary/deeptools"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'deeptools_plotprofile' {
-//             args             = ""
-//             suffix           = ".mLb.clN"
-//             publish_dir      = "bwa/mergedLibrary/deeptools"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'deeptools_plotheatmap' {
-//             args             = ""
-//             suffix           = ".mLb.clN"
-//             publish_dir      = "bwa/mergedLibrary/deeptools"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'deeptools_plotfingerprint' {
-//             args             = "--skipZeros"
-//             suffix           = ".mLb.clN"
-//             publish_dir      = "bwa/mergedLibrary/deeptools"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'macs2_callpeak' {
-//             args             = "--keep-dup all"
-//             suffix           = ""
-//             publish_dir      = "bwa/mergedLibrary/macs2"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'plot_macs2_qc' {
-//             args             = "-o ./ -p macs2_peak"
-//             suffix           = ""
-//             publish_dir      = "bwa/mergedLibrary/macs2"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'homer_annotatepeaks_macs2' {
-//             args             = "-gid"
-//             suffix           = "_peaks"
-//             publish_dir      = "bwa/mergedLibrary/macs2"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'plot_homer_annotatepeaks' {
-//             args             = "-o ./ -p macs2_annotatePeaks"
-//             suffix           = ""
-//             publish_dir      = "bwa/mergedLibrary/macs2"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'macs2_consensus' {
-//             args             = ""
-//             suffix           = ""
-//             publish_dir      = "bwa/mergedLibrary/macs2"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'homer_annotatepeaks_consensus' {
-//             args             = "-gid"
-//             suffix           = ""
-//             publish_dir      = "bwa/mergedLibrary/macs2"
-//             publish_results  = "all"
-//             publish_by_id    = true
-//         }
-//         'get_software_versions' {
-//             args             = ""
-//             suffix           = ""
-//             publish_dir      = "pipeline_info"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'output_documentation' {
-//             args             = ""
-//             suffix           = ""
-//             publish_dir      = "pipeline_info"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//         'multiqc' {
-//             args             = ""
-//             suffix           = ""
-//             publish_dir      = "multiqc"
-//             publish_results  = "all"
-//             publish_by_id    = false
-//         }
-//     }
-// }
