Rename annotated peaks

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -200,7 +200,8 @@ modules['homer_annotatepeaks_consensus'] =
     module_options (
         args            : "-gid",
         publish_dir     : "bwa/mergedLibrary/macs2",
-        publish_by_id   : true
+        publish_by_id   : true,
+        suffix          : ".consensus_peaks"
     )
 
 modules['get_software_versions'] =
