--- a/conf/modules.config
+++ b/conf/modules.config
@@ -204,6 +204,23 @@ modules['homer_annotatepeaks_consensus'] =
         suffix          : ".consensus_peaks"
     )
 
+modules['subread_featurecounts'] =
+    module_options (
+        args            : "-F SAF -O --fracOverlap 0.2",
+        publish_dir     : "bwa/mergedLibrary/macs2",
+        suffix          : ""
+    )
+
+modules['deseq2_featurecounts'] =
+    module_options (
+        publish_dir     : "bwa/mergedLibrary/macs2"
+    )
+
+modules['igv'] =
+    module_options (
+        publish_dir     : "igv"
+    )
+
 modules['get_software_versions'] =
     module_options (
         publish_dir     : "pipeline_info"
