Add in first pass IGV

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -193,7 +193,8 @@ modules['plot_homer_annotatepeaks'] =
 
 modules['macs2_consensus'] =
     module_options (
-        publish_dir     : "bwa/mergedLibrary/macs2"
+        publish_dir     : "bwa/mergedLibrary/macs2",
+        publish_by_id   : true
     )
 
 modules['homer_annotatepeaks_consensus'] =
