Add in first batch of custom MultiQC custom content

--- a/assets/multiqc_config.yaml
+++ b/assets/multiqc_config.yaml
@@ -167,3 +167,5 @@ sp:
         fn: '*plotFingerprint*'
     deeptools/plotProfile:
         fn: '*plotProfile*'
+    phantompeakqualtools/out:
+        fn: '*.spp.out'
