--- a/conf/modules.config
+++ b/conf/modules.config
@@ -10,7 +10,7 @@ def module_options (Map args) {
     options.args            = args.args ?: ''
     options.args2           = args.args2 ?: ''
     options.publish_dir     = args.publish_dir ?: ''
-    options.publish_results = args.publish_results ?: ''
+    options.publish_results = args.publish_results ?: 'all'
     options.publish_by_id   = args.publish_by_id ?: false
     options.suffix          = args.suffix ?: ''
     return options
@@ -128,6 +128,11 @@ modules['phantompeakqualtools'] =
         suffix          : ".mLb.clN"
     )
 
+modules['multiqc_custom_phantompeakqualtools'] =
+    module_options (
+        publish_results : "none"
+    )
+
 modules['bedtools_genomecov'] =
     module_options (
         publish_dir     : "bwa/mergedLibrary/bigwig",
@@ -170,6 +175,12 @@ modules['macs2_callpeak'] =
     module_options (
         args            : "--keep-dup all",
         publish_dir     : "bwa/mergedLibrary/macs2"
+    )
+
+modules['frip_score'] =
+    module_options (
+        args            : "-bed -c -f 0.20",
+        publish_results : "none"
     )
 
 modules['plot_macs2_qc'] =
