Add in custom peaks

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -183,6 +183,11 @@ modules['frip_score'] =
         publish_results : "none"
     )
 
+modules['multiqc_custom_peaks'] =
+    module_options (
+        publish_results : "none"
+    )
+
 modules['plot_macs2_qc'] =
     module_options (
         args            : "-o ./ -p macs2_peak",
